[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/SCRIPT_Loja.gd" type="Script" id=1]
[ext_resource path="res://Fonts/limbo_font__by_alex484000-d5dthys.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Loja/Perk_2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Loja/Perk_4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Loja/Perk_3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Loja/Perk_1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Loja/Perk_5.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Loja/money.png" type="Texture" id=8]
[ext_resource path="res://FONT_Title.tres" type="DynamicFont" id=9]
[ext_resource path="res://FONT_Perks_Desc.tres" type="DynamicFont" id=10]
[ext_resource path="res://Audio/SoundCue_smallGame.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.129412, 0.247059, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Loja" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Loja"]
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 804.898, 195.584 )
color = Color( 0.27451, 0.2, 0.184314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loja" type="Label" parent="Loja"]
margin_left = 568.0
margin_top = 24.0
margin_right = 704.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "LOJA"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moedas" type="Label" parent="Loja"]
margin_left = 992.0
margin_top = 72.0
margin_right = 1085.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
text = "MOEDAS:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Loja"]
position = Vector2( 1112, 88 )
scale = Vector2( 0.345936, 0.345936 )
texture = ExtResource( 8 )

[node name="Perks" type="Node2D" parent="."]

[node name="Perk_1" type="Sprite" parent="Perks"]
position = Vector2( 136, 320 )
texture = ExtResource( 6 )

[node name="Perk_2" type="Sprite" parent="Perks"]
position = Vector2( 384, 320 )
texture = ExtResource( 3 )

[node name="Perk_3" type="Sprite" parent="Perks"]
position = Vector2( 608, 320 )
texture = ExtResource( 5 )

[node name="Perk_4" type="Sprite" parent="Perks"]
position = Vector2( 840, 320 )
texture = ExtResource( 4 )

[node name="Perk_5" type="Sprite" parent="Perks"]
position = Vector2( 1096, 320 )
texture = ExtResource( 7 )

[node name="Forca Brutal" type="Label" parent="Perks"]
margin_left = 296.0
margin_top = 208.0
margin_right = 470.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 9 )
text = "Forca Brutal"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tanatofobia" type="Label" parent="Perks"]
margin_left = 1016.0
margin_top = 208.0
margin_right = 1177.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 0.576471, 0.576471, 1 )
text = "Tanatofobia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Relampago" type="Label" parent="Perks"]
margin_left = 24.0
margin_top = 208.0
margin_right = 240.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 9 )
text = "Pistoleiro"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Agitacao" type="Label" parent="Perks"]
margin_left = 512.0
margin_top = 208.0
margin_right = 712.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 9 )
text = "Adrenalina"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PESO PENA" type="Label" parent="Perks"]
margin_left = 776.0
margin_top = 208.0
margin_right = 900.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 9 )
text = "AGITACAO"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Perks"]
margin_left = 8.0
margin_top = 400.0
margin_right = 264.0
margin_bottom = 586.0
custom_fonts/font = ExtResource( 10 )
text = "Aumenta a velocidade dos seus tiros em 50% e Diminui consideravelmente o tempo de tiros consecutivos.           

300 Moedas"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Perks"]
margin_left = 312.0
margin_top = 400.0
margin_right = 456.0
margin_bottom = 505.0
custom_fonts/font = ExtResource( 10 )
text = "Aumenta o dano dos seus tiros em 20%.      
150 moedas"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Perks"]
margin_left = 536.0
margin_top = 400.0
margin_right = 680.0
margin_bottom = 532.0
custom_fonts/font = ExtResource( 10 )
text = "Aumenta a sua velocidade em 30% e seu pulo em 5%.                            
200 Moedas"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Perks"]
margin_left = 744.0
margin_top = 400.0
margin_right = 928.0
margin_bottom = 532.0
custom_fonts/font = ExtResource( 10 )
text = "Ganha o dobro de pontos e moedas. (Apenas no final da partida)           

500 Moedas"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Perks"]
margin_left = 968.0
margin_top = 400.0
margin_right = 1216.0
margin_bottom = 532.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 0.505882, 0.505882, 1 )
text = "Voce nao sofre mais penalidades(perder pontos e moedas) apos morrer

750 Moedas"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Perk1" type="Button" parent="."]
margin_left = 40.0
margin_top = 584.0
margin_right = 216.0
margin_bottom = 624.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "COMPRAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Perk2" type="Button" parent="."]
margin_left = 296.0
margin_top = 584.0
margin_right = 472.0
margin_bottom = 624.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "COMPRAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Perk3" type="Button" parent="."]
margin_left = 520.0
margin_top = 584.0
margin_right = 696.0
margin_bottom = 624.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "COMPRAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Perk4" type="Button" parent="."]
margin_left = 744.0
margin_top = 584.0
margin_right = 920.0
margin_bottom = 624.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "COMPRAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Perk5" type="Button" parent="."]
margin_left = 1000.0
margin_top = 584.0
margin_right = 1176.0
margin_bottom = 624.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "COMPRAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTP_Perk1" type="HTTPRequest" parent="."]

[node name="HTTP_Perk2" type="HTTPRequest" parent="."]

[node name="HTTP_Perk3" type="HTTPRequest" parent="."]

[node name="HTTP_Perk4" type="HTTPRequest" parent="."]

[node name="HTTP_Perk5" type="HTTPRequest" parent="."]

[node name="HTTP_Pontos" type="HTTPRequest" parent="."]

[node name="HTTP_Moedas" type="HTTPRequest" parent="."]

[node name="HTTP_Moedas_Tirar" type="HTTPRequest" parent="."]

[node name="HTTP_Comprar" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
[connection signal="pressed" from="Perk1" to="." method="_on_Perk1_pressed"]
[connection signal="pressed" from="Perk2" to="." method="_on_Perk2_pressed"]
[connection signal="pressed" from="Perk3" to="." method="_on_Perk3_pressed"]
[connection signal="pressed" from="Perk4" to="." method="_on_Perk4_pressed"]
[connection signal="pressed" from="Perk5" to="." method="_on_Perk5_pressed"]
[connection signal="request_completed" from="HTTP_Perk1" to="." method="Perk1_request_completed"]
[connection signal="request_completed" from="HTTP_Perk2" to="." method="Perk2_request_completed"]
[connection signal="request_completed" from="HTTP_Perk3" to="." method="Perk3_request_completed"]
[connection signal="request_completed" from="HTTP_Perk4" to="." method="Perk4_request_completed"]
[connection signal="request_completed" from="HTTP_Perk5" to="." method="Perk5_request_completed"]
[connection signal="request_completed" from="HTTP_Moedas" to="." method="_on_HTTP_Moedas_request_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
